fixed glitch on the slider

--- a/src/styles/slides.css
+++ b/src/styles/slides.css
@@ -11,6 +11,8 @@
   width: 100%;
   height: 670px;
   position: relative;
+
+  overflow: hidden; /* Prevent vertical scrolling */
 }
 
 .about__container-cards {
